<resources>
    <string name="app_name">NoteBank</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_empty_password">Password Field is Empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to upload/download pages -->
    <string name="search_button">search</string>
    <string name="upload_button">upload</string>

    <string name="professor_header">Professor</string>
    <string name="course_name_header">Course Name</string>
    <string name="course_id_header">Course ID</string>
    <string name="upload_date_prompt">Which day\'s notes are you uploading?</string>
    <string name="download_date_prompt">Which day\'s notes are you looking for?</string>

</resources>
