<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs446.notebank.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/course_name_header"
                android:id="@+id/textView1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/course_name"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/course_id_header"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/course_id"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/professor_header"
                android:id="@+id/textView3" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/course_prof"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown"
                android:layout_weight="0.80" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/download_date_prompt"
                android:id="@+id/download_date_text" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:id="@+id/datePicker" />

            <Button
                android:id="@+id/course_search"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_button"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
